--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     
     <header style="display: none;">
         <div style="display: flex; flex: 1; justify-content: center; align-items: center; flex-wrap: wrap; gap: 16px;">
-            <a target="_blank" href="https://facebook.com/TheBoyNamed" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/RepeaterCreeper/" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
             <a target="_blank" href="https://twitter.com/RepeaterCreeper" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
             <a target="_blank" href="https://www.github.com/RepeaterCreeper" class="social-icon github"><i class="fab fa-github"></i></a>
@@ -93,11 +92,11 @@
             <h1 style="margin: 0; font-weight: 800">About Me</h1>
         </div>
         <div class="section-content">
-            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently a 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines. I'm a Software Engineer for PDCflow</p>
-            <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Adobe XD or Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
+            <p>My name is Joseph Chua. I'm a graduate of Bachelors of Science in Computer Science and I love making things for people!</p>
+            <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
         </div>
         <div class="section-actions">
-            <a target="_blank" class="btn btn-outline blue-border hvr-bounce-to-right" href="#">View my Resume</a>
+            <a target="_blank" class="btn btn-outline blue-border hvr-bounce-to-right" href="/resume.pdf" download>View my Resume</a>
             <a target="_blank" class="btn btn-outline pink-border hvr-bounce-to-right" href="https://m.me/TheBoyNamed">Let's Chat!</a>
         </div>
     </section>
@@ -174,7 +173,7 @@
                             <p>2020</p>
                         </div>
                         <div class="project-action">
-                            <a target="_blank" href="https://github.com/RepeaterCreeper/sikret" class="btn-action"><i class="fab fa-github"></i> View on GitHub</a>
+                            <a target="_blank" href="https://sikret-5fac5.firebaseapp.com/" class="btn-action"><i class="fab fa-github"></i> View Demo</a>
                         </div>
                     </div>
                 </div>
@@ -182,18 +181,18 @@
                     <div class="project-container">
                         <div class="project-header">
                             <h1 style="margin: 0;">LoL Stats</h1>
-                            <p>2020 - <i>present</i></p>
+                            <p>2020 - <i>2023</i></p>
                         </div>
                         <div class="project-action">
-                            <a target="_blank" class="btn-action" href="https://lolsea.net"><i class="fa fa-eye"></i> View More Info</a>
+                            <a target="_blank" class="btn-action disabled" href="#"><i class="fa fa-eye"></i> Private</a>
                         </div>
                     </div>
                 </div>
-                <div class="project-item in-progress">
+                <div class="project-item discontinued">
                     <div class="project-container">
                         <div class="project-header">
                             <h1 style="margin: 0;">Vexill (collab)</h1>
-                            <p>2019 - <i>present</i></p>
+                            <p>2019 - <i>2022</i></p>
                         </div>
                         <div class="project-action">
                             <a target="_blank" class="btn-action disabled"><i class="fa fa-eye-slash"></i> Private</a>
@@ -243,7 +242,7 @@
                     </div>
                     <div style="flex: 1;">
                         <h1>Communication</h1>
-                        <p>I have high compatibility working with just about anyone. Very rarely do I have someone that I cannot work with and vice-versa.</p>
+                        <p>I love sharing my thoughts and collaborating with others. Spreading knowledge is one of my passion and I think it's a great way of reinforcing the learning.</p>
                     </div>
                 </div>
             </div>
